--- a/imglyKit/Frontend/ru.lproj/Localizable.strings
+++ b/imglyKit/Frontend/ru.lproj/Localizable.strings
@@ -67,29 +67,28 @@
 // Text Editor
 "text-editor.title" = "Text";
 
-"boy-min"           =  "boy-min_en";
-"close-min"         =  "close-min_en";
-"dollar-min"        =  "dollar-min_en";
-"fire-min"          =  "fire-min_en";
-"girl-min"          =  "girl-min_en";
-"good-min"          =  "good-min_en";
-"heart-min"         =  "heart-min_en";
-"idea-min"          =  "idea-min_en";
-"open-min"          =  "open-min_en";
-"paperplane-min"    =  "paperplane-min_en";
-"pen-min"           =  "pen-min_en";
-"plane-min"         =  "plane-min_en";
-"redarrow-min"      =  "redarrow-min_en";
-"rise-min"          =  "rise-min_en";
-"whitearrow-min"    =  "whitearrow-min_en";
-"word1-min"         =  "word1-min_en";
-"word2-min"         =  "word2-min_en";
-"word3-min"         =  "word3-min_en";
-"word4-min"         =  "word4-min_en";
-"word5-min"         =  "word5-min_en";
-"word6-min"         =  "word6-min_en";
-"word7-min"         =  "word7-min_en";
-"word8-min"         =  "word8-min_en";
-"word9-min"         =  "word9-min_en";
-"yellowarrow-min"   =  "yellowarrow-min_en";
-
+"boy-min"  = "boy-min";
+"close-min" = "close-min";
+"dollar-min" = "dollar-min";
+"fire-min" = "fire-min";
+"girl-min" = "girl-min";
+"good-min" = "good-min";
+"heart-min" = "heart-min";
+"idea-min" = "idea-min";
+"open-min" = "open-min";
+"paperplane-min" = "paperplane-min";
+"pen-min" = "pen-min";
+"plane-min" = "plane-min";
+"redarrow-min" = "redarrow-min";
+"rise-min" = "rise-min";
+"whitearrow-min" = "whitearrow-min";
+"word1-min" = "word1-min";
+"word2-min" = "word2-min";
+"word3-min" = "word3-min";
+"word4-min" = "word4-min";
+"word5-min" = "word5-min";
+"word6-min" = "word6-min";
+"word7-min" = "word7-min";
+"word8-min" = "word8-min"      ;
+"word9-min" = "word9-min";
+"yellowarrow-min" = "yellowarrow-min";
