--- a/imglyKit/Frontend/ru.lproj/Localizable.strings
+++ b/imglyKit/Frontend/ru.lproj/Localizable.strings
@@ -17,52 +17,52 @@
 "camera-view-controller.error-saving-video.cancel" = "Cancel";
 
 // Main Editor
-"main-editor.title" = "Editor";
+"main-editor.title" = "Редактор";
 "main-editor.button.magic" = "Magic";
-"main-editor.button.filter" = "Filter";
-"main-editor.button.stickers" = "Stickers";
-"main-editor.button.orientation" = "Orientation";
-"main-editor.button.focus" = "Focus";
-"main-editor.button.crop" = "Crop";
-"main-editor.button.brightness" = "Brightness";
-"main-editor.button.contrast" = "Contrast";
-"main-editor.button.saturation" = "Saturation";
-"main-editor.button.text" = "Text";
-
+"main-editor.button.filter" = "Фильтр";
+"main-editor.button.stickers" = "Стикеры";
+"main-editor.button.orientation" = "Ориентация";
+"main-editor.button.focus" = "Фокус";
+"main-editor.button.crop" = "Обрезать";
+"main-editor.button.brightness" = "Яркость";
+"main-editor.button.contrast" = "Контраст";
+"main-editor.button.saturation" = "Насыщенность";
+"main-editor.button.text" = "Текс";
+"Drawing" = "Нарисовать";
 // Filter Editor
-"filter-editor.title" = "Filter";
+"filter-editor.title" = "Фильтр";
 
 // Stickers Editor
-"stickers-editor.title" = "Stickers";
+"stickers-editor.title" = "Стикеры";
 
 // Orientation Editor
-"orientation-editor.title" = "Orientation";
-"orientation-editor.rotate-left" = "Rotate L";
-"orientation-editor.rotate-right" = "Rotate R";
-"orientation-editor.flip-horizontally" = "Flip H";
-"orientation-editor.flip-vertically" = "Flip V";
+"orientation-editor.title" = "Ориентация";
+"orientation-editor.rotate-left" = "";
+"orientation-editor.rotate-right" = "";
+"orientation-editor.flip-horizontally" = "";
+"orientation-editor.flip-vertically" = "";
 
 // Focus Editor
-"focus-editor.title" = "Focus";
-"focus-editor.off" = "Off";
-"focus-editor.linear" = "Linear";
-"focus-editor.radial" = "Radial";
+"focus-editor.title" = "Фокус";
+"focus-editor.off" = "Выключить";
+"focus-editor.linear" = "Линейно";
+"focus-editor.radial" = "По кругу";
 
 // Crop Editor
-"crop-editor.title" = "Crop";
-"crop-editor.free" = "Free";
+"crop-editor.title" = "Обрезаь";
+"crop-editor.free" = "Свободно";
 "crop-editor.1-to-1" = "1:1";
 "crop-editor.4-to-3" = "4:3";
 "crop-editor.16-to-9" = "16:9";
 
 // Brightness Editor
-"brightness-editor.title" = "Brightness";
+"brightness-editor.title" = "Яркость";
 
 // Contrast Editor
-"contrast-editor.title" = "Contrast";
+"contrast-editor.title" = "Контраст";
 
 // Saturation Editor
-"saturation-editor.title" = "Saturation";
+"saturation-editor.title" = "Насыщеность";
 
 // Text Editor
 "text-editor.title" = "Text";
