--- a/imglyKit/Frontend/de.lproj/Localizable.strings
+++ b/imglyKit/Frontend/de.lproj/Localizable.strings
@@ -16,56 +16,56 @@
 "camera-view-controller.error-saving-video.title" = "Error while saving video";
 "camera-view-controller.error-saving-video.cancel" = "Cancel";
 
-// Main Editor
+// Haupteditor
 "Editor" = "Editor";
 "main-editor.title" = "Editor";
 "main-editor.button.magic" = "Magic";
 "main-editor.button.filter" = "Filter";
-"main-editor.button.stickers" = "Stickers";
-"main-editor.button.orientation" = "Orientation";
-"main-editor.button.focus" = "Focus";
-"main-editor.button.crop" = "Crop";
-"main-editor.button.brightness" = "Brightness";
-"main-editor.button.contrast" = "Contrast";
+"main-editor.button.stickers" = "Aufkleber";
+"main-editor.button.orientation" = "Orientierung";
+"main-editor.button.focus" = "Fokus";
+"main-editor.button.crop" = "Zuschneiden";
+"main-editor.button.brightness" = "Helligkeit";
+"main-editor.button.contrast" = "Kontrast";
 "main-editor.button.saturation" = "Saturation";
 "main-editor.button.text" = "Text";
-"Drawing" = "Drawing";
-// Filter Editor
+"Drawing" = "Zeichnung";
+// Filtereditor
 "filter-editor.title" = "Filter";
 
-// Stickers Editor
-"stickers-editor.title" = "Stickers";
+// Aufkleber Editor
+"stickers-editor.title" = "Aufkleber";
 
-// Orientation Editor
-"orientation-editor.title" = "Orientation";
-"orientation-editor.rotate-left" = "Rotate L";
-"orientation-editor.rotate-right" = "Rotate R";
-"orientation-editor.flip-horizontally" = "Flip H";
-"orientation-editor.flip-vertically" = "Flip V";
+// Orientierungseditor
+"Orientierungseditor.title" = "Orientierung";
+"Orientierungseditor.rotate-left" = "L drehen";
+"Orientierungseditor.rotate-right" = "R drehen";
+"Orientierungseditor.flip-horizontal" = "Flip H";
+"Orientierungseditor.flip-vertikal" = "Flip V";
 
-// Focus Editor
-"focus-editor.title" = "Focus";
-"focus-editor.off" = "Off";
+// Fokuseditor
+"focus-editor.title" = "Fokus";
+"focus-editor.off" = "Aus";
 "focus-editor.linear" = "Linear";
 "focus-editor.radial" = "Radial";
 
 // Crop Editor
-"crop-editor.title" = "Crop";
-"crop-editor.free" = "Free";
-"crop-editor.1-to-1" = "1:1";
-"crop-editor.4-to-3" = "4:3";
-"crop-editor.16-to-9" = "16:9";
+"crop-editor.title" = "Zuschneiden";
+"crop-editor.free" = "Kostenlos";
+"Crop-Editor.1-to-1" = "1: 1";
+"Crop-Editor.4-to-3" = "4: 3";
+"Crop-Editor.16-to-9" = "16: 9";
 
-// Brightness Editor
-"brightness-editor.title" = "Brightness";
+// Helligkeitseditor
+"brightness-editor.title" = "Helligkeit";
 
-// Contrast Editor
-"contrast-editor.title" = "Contrast";
+// Kontrasteditor
+"Kontrast-Editor.title" = "Kontrast";
 
-// Saturation Editor
-"saturation-editor.title" = "Saturation";
+// Sättigungseditor
+"Saturation-editor.title" = "Saturation";
 
-// Text Editor
+// Texteditor
 "text-editor.title" = "Text";
 
 "boy-min"           =  "boy-min_en";
