--- a/imglyKit/Frontend/fr.lproj/Localizable.strings
+++ b/imglyKit/Frontend/fr.lproj/Localizable.strings
@@ -16,57 +16,75 @@
 "camera-view-controller.error-saving-video.title" = "Error while saving video";
 "camera-view-controller.error-saving-video.cancel" = "Cancel";
 
-// Main Editor
+/*
+  Localizable.strings
+  imglyKit
+
+  Created by Sascha Schwabbauer on 07/04/15.
+  Copyright (c) 2015 9elements GmbH. All rights reserved.
+*/
+
+// Camera View Controller
+"camera-view-controller.camera-no-permission.title" = "No permission";
+"camera-view-controller.camera-no-permission.message" = "Permission to use Camera are required, please change privacy settings.";
+"camera-view-controller.camera-no-permission.settings" = "Settings";
+"camera-view-controller.camera-no-permission.cancel" = "Cancel";
+"camera-view-controller.mode.photo" = "PHOTO";
+"camera-view-controller.mode.video" = "VIDEO";
+"camera-view-controller.error-saving-video.title" = "Error while saving video";
+"camera-view-controller.error-saving-video.cancel" = "Cancel";
+
+// Éditeur principal
 "Editor" = "Editor";
-"main-editor.title" = "Editor";
+"main-editor.title" = "Editeur";
 "main-editor.button.magic" = "Magic";
-"main-editor.button.filter" = "Filter";
-"main-editor.button.stickers" = "Stickers";
+"main-editor.button.filter" = "Filtre";
+"main-editor.button.stickers" = "Autocollants";
 "main-editor.button.orientation" = "Orientation";
 "main-editor.button.focus" = "Focus";
-"main-editor.button.crop" = "Crop";
-"main-editor.button.brightness" = "Brightness";
-"main-editor.button.contrast" = "Contrast";
+"main-editor.button.crop" = "Recadrer";
+"main-editor.button.brightness" = "Luminosité";
+"main-editor.button.contrast" = "Contraste";
 "main-editor.button.saturation" = "Saturation";
-"main-editor.button.text" = "Text";
-"Drawing" = "Drawing";
-// Filter Editor
-"filter-editor.title" = "Filter";
+"main-editor.button.text" = "Texte";
+"Drawing" = "Dessin";
+// Editeur de filtres
+"filter-editor.title" = "Filtre";
 
-// Stickers Editor
-"stickers-editor.title" = "Stickers";
+// Éditeur d'autocollants
+"stickers-editor.title" = "Autocollants";
 
-// Orientation Editor
+// Éditeur d'orientation
 "orientation-editor.title" = "Orientation";
-"orientation-editor.rotate-left" = "Rotate L";
-"orientation-editor.rotate-right" = "Rotate R";
-"orientation-editor.flip-horizontally" = "Flip H";
-"orientation-editor.flip-vertically" = "Flip V";
+"orientation-editor.rotate-left" = "Rotation L";
+"orientation-editor.rotate-right" = "Rotation R";
+"orientation-editor.flip-horizontalally" = "Retourner H";
+"orientation-editor.flip-verticalically" = "Retourner V";
 
-// Focus Editor
+// Éditeur de focus
 "focus-editor.title" = "Focus";
 "focus-editor.off" = "Off";
-"focus-editor.linear" = "Linear";
+"focus-editor.linear" = "Linéaire";
 "focus-editor.radial" = "Radial";
 
-// Crop Editor
-"crop-editor.title" = "Crop";
-"crop-editor.free" = "Free";
-"crop-editor.1-to-1" = "1:1";
-"crop-editor.4-to-3" = "4:3";
-"crop-editor.16-to-9" = "16:9";
+// Éditeur de recadrage
+"crop-editor.title" = "Recadrer";
+"crop-editor.free" = "Gratuit";
+"crop-editor.1-to-1" = "1: 1";
+"crop-editor.4-to-3" = "4: 3";
+"crop-editor.16-to-9" = "16: 9";
 
-// Brightness Editor
-"brightness-editor.title" = "Brightness";
+// Éditeur de luminosité
+"luminosité-éditeur.titre" = "Luminosité";
 
-// Contrast Editor
-"contrast-editor.title" = "Contrast";
+// Éditeur de contraste
+"contrast-editor.title" = "Contraste";
 
-// Saturation Editor
+// Éditeur de saturation
 "saturation-editor.title" = "Saturation";
 
-// Text Editor
-"text-editor.title" = "Text";
+// Éditeur de texte
+"text-editor.title" = "Texte";
 
 "boy-min"           =  "boy-min_en";
 "close-min"         =  "close-min_en";
