--- a/imglyKit/Frontend/ru.lproj/Localizable.strings
+++ b/imglyKit/Frontend/ru.lproj/Localizable.strings
@@ -49,7 +49,7 @@
 "focus-editor.radial" = "По кругу";
 
 // Crop Editor
-"crop-editor.title" = "Обрезаь";
+"crop-editor.title" = "Обрезать";
 "crop-editor.free" = "Свободно";
 "crop-editor.1-to-1" = "1:1";
 "crop-editor.4-to-3" = "4:3";
