--- a/imglyKit/Frontend/de.lproj/Localizable.strings
+++ b/imglyKit/Frontend/de.lproj/Localizable.strings
@@ -52,9 +52,9 @@
 // Crop Editor
 "crop-editor.title" = "Zuschneiden";
 "crop-editor.free" = "Kostenlos";
-"Crop-Editor.1-to-1" = "1: 1";
-"Crop-Editor.4-to-3" = "4: 3";
-"Crop-Editor.16-to-9" = "16: 9";
+"crop-editor.1-to-1" = "1:1";
+"crop-editor.4-to-3" = "4:3";
+"crop-editor.16-to-9" = "16:9";
 
 // Helligkeitseditor
 "brightness-editor.title" = "Helligkeit";
@@ -63,7 +63,7 @@
 "Kontrast-Editor.title" = "Kontrast";
 
 // Sättigungseditor
-"Saturation-editor.title" = "Saturation";
+"Saturation-editor.title" = "Sättigung";
 
 // Texteditor
 "text-editor.title" = "Text";
@@ -94,3 +94,12 @@
 "word9-min"         =  "word9-min_en";
 "yellowarrow-min"   =  "yellowarrow-min_en";
 
+"contrast-editor.title" = "Kontrast";
+"saturation-editor.title" = "Sättigung";
+
+
+"orientation-editor.title" = "Orientierung";
+"orientation-editor.rotate-left" = "";
+"orientation-editor.rotate-right" = "";
+"orientation-editor.flip-horizontally" = "";
+"orientation-editor.flip-vertically" = "";
